CATS-1317 To make requisition history visible and tranport requision details to show approved requision

--- a/Web/Areas/EarlyWarning/Views/Request/Details.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Request/Details.cshtml
@@ -264,10 +264,12 @@
 
                         <li><a class="btn green-haze-stripe" href="@Url.Action("RejectRequest", "Request", new {id = modelRequest.RegionalRequestID})">Reject</a></li>
                     }
-                    else if (modelRequest.StatusID == (int)Cats.Models.Constant.RegionalRequestStatus.Approved)
+                    //else if (modelRequest.StatusID == (int)Cats.Models.Constant.RegionalRequestStatus.Approved)
+                    //{
+                    else if (modelRequest.BusinessProcess.CurrentState.BaseStateTemplate.Name == "Approved")
                     {
-                        if (modelRequest.Program == "Relief")
-                        {
+                    if (modelRequest.Program == "Relief")
+                    {
                             <li>
                                 <a class="btn green-haze-stripe">
                                     @Html.EarlyWarningOperationMenuItem(@Url.Action("CreateRequisiton", "ReliefRequisition", new { Area = "EarlyWarning", id = modelRequest.RegionalRequestID }),
