CATS-1304: Data Entry Status Indicator for financial CTL

--- a/Web/Areas/EarlyWarning/Views/Home/Index.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 @{
     ViewBag.Title = "Home";
 
-    Layout = "~/Views/Shared/_CATSLayout.cshtml";
+    DocumentFormat.OpenXml.Drawing.Charts.Layout = "~/Views/Shared/_CATSLayout.cshtml";
    
     const string pageName = "EarlyWarning.Index";
 }
@@ -898,7 +898,7 @@
             $scope.getRequestedInfo = function () {
                 $http.post("@Url.Action("GetRequestedInfo", "EWDashboard", new { Area = "EarlyWarning" })").success(onRequestedAmoutSuccess);
 
-        };
+            };
 
             $scope.getRegionalRequestDataEntryStatus = function() {
                 $http.post("@Url.Action("GetRegionalRequestDataEntryStatus", "EWDashboard", new { Area = "EarlyWarning" })").success(onRegionalRequestDataEntryStatus);
