--- a/Web/Areas/Procurement/Views/TransportBidPlan/WarehouseSelection.cshtml
+++ b/Web/Areas/Procurement/Views/TransportBidPlan/WarehouseSelection.cshtml
@@ -93,19 +93,21 @@
     .Columns(columns =>
     {
         //columns.Bound(p => p.BidPlanID).Width(100);
-        // columns.Bound(p => p.WoredaID).Width(100);
+        //columns.Bound(p => p.WoredaID).Width(100);
         columns.ForeignKey(p => p.WarehouseID, (IEnumerable)ViewBag.WarehouseID, "Id", "Name").Title(Html.Translate("Warehouse")).Width(250);
         //columns.Bound(p => p.WarehouseName).Width(100);
         columns.Bound(p => p.PSNP).Width(100).Title(Html.Translate("PSNP"));
         columns.Bound(p => p.Relief).Title(Html.Translate("Relief")).Width(100);
         columns.Bound(p => p.Total).Title(Html.Translate("Total")).Width(100);
+
+
         columns.Command(command =>
         {
             command.Edit();
             command.Custom("Delete").Click("deleteRecord");
         }).Width(172);
     })
-                            // .ToolBar(toolbar => toolbar.Create())
+          // .ToolBar(toolbar => toolbar.Create())
 
           .ToolBar(toolBar => toolBar.Template("<a class='k-button k-button-icontext k-grid-add' href='#' onlick='customCommand()'>Add Warehouse</a>"))
 
@@ -128,7 +130,7 @@
         })
         .Create(update => update.Action("CreateWarehouseSelectionAjax", "TransportBidPlan").Data("filterInfo"))
         .Read(read => read.Action("ReadJson", "TransportBidPlan").Data("filterInfo"))
-        .Update(update => update.Action("UpdateWarehouseSelectionAjax", "TransportBidPlan"))
+        .Update(update => update.Action("UpdateWarehouseSelectionAjax", "TransportBidPlan").Data("filterInfo"))
         .Destroy(update => update.Action("DeleteWarehouseSelectionAjax", "TransportBidPlan"))
     ).Resizable(resize => resize.Columns(true))
                     )
@@ -164,7 +166,9 @@
     }
     function filterInfo() {
         return {TransportBidPlanID:TransportBidPlanID,selectedWoreda:selectedWoreda};
-    }
+    }   
+
+  
     function onSelect(e) {
         var id = this.dataItem(e.node).id;
         if (id) {
