--- a/Web/Areas/Logistics/Views/Home/Index.cshtml
+++ b/Web/Areas/Logistics/Views/Home/Index.cshtml
@@ -291,13 +291,9 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <div class="col-md-12">* Only Warehouses assigned for Bid Plan "{{BidPlanName}}" are listed here.</div>
+                            <div class="col-md-12">* Warehouses assigned for Bid Plan "{{BidPlanName}}" are listed here.</div>
 
-                            @*<div class="col-md-4" style="min-height: 250px;">
-                                <div class="portlet-content">
-                                    <div id="containerPIE" class="chartWrap" draw-column-chart=""></div>
-                                </div>
-                            </div>*@
+                  
                         </div>
                     </div>
                 </div>
