Transport order workflow implementation is done on transport order filtering.

--- a/Web/Areas/Procurement/Views/TransportOrder/Index.cshtml
+++ b/Web/Areas/Procurement/Views/TransportOrder/Index.cshtml
@@ -398,8 +398,8 @@
         }
 
     </script>
-<style type="text/css">
+@*<style type="text/css">
     table > tbody > tr > td, table > tbody > tr > th, table > tfoot > tr > td, table > tfoot > tr > th, table > thead > tr > td, table > thead > tr > th {
         white-space: nowrap;
     }
-</style>
+</style>*@
