CATS-1315: merge conflict resloved

--- a/Web/Areas/EarlyWarning/Views/GiftCertificate/Index.cshtml
+++ b/Web/Areas/EarlyWarning/Views/GiftCertificate/Index.cshtml
@@ -105,11 +105,6 @@
                                     @Html.Translate("Print") + " </button> ", "btn-Print-gift")
                             }
 
-                                            if (item.IsApprovable)
-                                            {
-                                                @Html.EarlyWarningOperationButton(
-                                                    @Url.Action("Approved", "GiftCertificate", new { id = item.GiftCertificateID }),
-                                                    EarlyWarningConstants.Operation.Approve_Gift_Certeficate, " <button type=\"button\" class=\"btn btn-xs btn-success\"><span class=\"fa fa-check\"></span> " + @Html.Translate("Approve") + " </button> ", "btn-Approve-Gift", "", "btnApprove")
                             <div class='btn-group'>
                                 <button type='button' id='workflow-#=RequisitionId#' class='btn btn-default dropdown-toggle btn-xs green-stripe' data-toggle='dropdown'>
                                     <i class='fa fa-ellipsis-horizontal'>
@@ -126,13 +121,12 @@
                                             <li class="edit_button">
                                                 <a href="javascript:promot_workflow(@item.BusinessProcessID ,@item.ApprovedId,'Approve',@item.GiftCertificateID)" title="Approve">Approve</a>
                                             </li>
-                                            }
                                         }
                                     }
 
                                     @if (item.Status == "Approved")
                                     {
-                                        if (item.IsPrinted == false & item.AllowReject == false)
+                                        if (item.IsPrinted == false)
                                         {
                                             if (ewCache.CheckAccess(constants.ItemName(EarlyWarningConstants.Operation.Reject_GiftCertificate), DateTime.Now)
                                                 == AuthorizationType.Allow)
@@ -144,9 +138,9 @@
                                         }
                                     }
 
-                                   @if (item.Status == "Rejected")
+                                    @if (item.Status == "Rejected")
                                     {
-                                        if (item.IsPrinted == false & item.AllowReject == false)
+                                        if (item.IsPrinted == false)
                                         {
                                             if (ewCache.CheckAccess(constants.ItemName(EarlyWarningConstants.Operation.Approve_Gift_Certeficate), DateTime.Now)
                                                 == AuthorizationType.Allow)
@@ -167,7 +161,7 @@
 
                               ).Title(@Html.Translate("Action")).Width("200px");
 
-}
+                      }
                       ).DetailTemplate(detail =>
                           Html.Kendo().Grid(detail.GiftCertificateDetails).Name("GCDetails" + detail.GiftCertificateID)
                               .Columns(c =>
