HRD wrokflow and Request workflow bugs are fixed.

--- a/Web/Areas/EarlyWarning/Views/Home/Index.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 @{
     ViewBag.Title = "Home";
 
-    DocumentFormat.OpenXml.Drawing.Charts.Layout = "~/Views/Shared/_CATSLayout.cshtml";
+    Layout = "~/Views/Shared/_CATSLayout.cshtml";
    
     const string pageName = "EarlyWarning.Index";
 }
